codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__status_line_setup__tests__status_line_setup_zh_hans_narrow.snap
---
source: tui/src/bottom_pane/status_line_setup.rs
assertion_line: 861
expression: "render_lines(&view, 32)"
---
                                
  配 置 状 态 栏                     
  选 择 要 显 示 在 状 态 栏 中 的 项 目 。   
                                
  Type to search                
                                
› [x] 使 用 主 题 颜 色     应 用 当 前  …
  ───────────────────────       
  [x] model           Current m…
  [x] current-dir     Current w…
  [x] git-branch      Current G…
  [ ] model-with-rea… Current m…
  [ ] reasoning       Current r…
  [ ] project-name    Project n…
↓                               
  gpt-5.2-codex · ~/my-projec…  
  space toggle · ←/→ reorder ·  
  enter save · esc cancel
