codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__status_line_setup__tests__status_line_setup_zh_hans_wide.snap
---
source: tui/src/bottom_pane/status_line_setup.rs
assertion_line: 869
expression: "render_lines(&view, 120)"
---
                                                                                                                        
  配 置 状 态 栏                                                                                                             
  选 择 要 显 示 在 状 态 栏 中 的 项 目 。                                                                                           
                                                                                                                        
  Type to search                                                                                                        
                                                                                                                        
› [x] 使 用 主 题 颜 色           应 用 当 前  /theme 的 颜 色                                                                       
  ───────────────────────                                                                                               
  [x] model                 Current model name                                                                          
  [x] current-dir           Current working directory                                                                   
  [x] git-branch            Current Git branch (omitted when unavailable)                                               
  [ ] model-with-reasoning  Current model name with reasoning level                                                     
  [ ] reasoning             Current reasoning level                                                                     
  [ ] project-name          Project name (omitted when unavailable)                                                     
↓                                                                                                                       
  gpt-5.2-codex · ~/my-project/subdir · feat/awesome-feature                                                            
  space toggle · ←/→ reorder · enter save · esc cancel
